[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/ply/gui/spatial_toolbar/ToolPanel.gd" type="Script" id=1]
[ext_resource path="res://addons/ply/gui/bottom_panel/BottomPanel.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 2
tabs_visible = false

[node name="Generate mesh" type="MarginContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="C" type="HBoxContainer" parent="TabContainer/Generate mesh"]
margin_right = 1016.0
margin_bottom = 588.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Generate mesh/C"]
margin_right = 166.0
margin_bottom = 588.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Generate mesh/C/VBoxContainer"]
margin_right = 166.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="C" type="VBoxContainer" parent="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer"]
margin_right = 166.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Plane" type="CheckBox" parent="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C"]
unique_name_in_owner = true
margin_right = 166.0
margin_bottom = 24.0
pressed = true
group = SubResource( 1 )
text = "Plane"

[node name="Cube" type="CheckBox" parent="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 166.0
margin_bottom = 52.0
group = SubResource( 1 )
text = "Cube"

[node name="Icosphere" type="CheckBox" parent="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 166.0
margin_bottom = 80.0
group = SubResource( 1 )
text = "Icosphere"

[node name="Cylinder" type="CheckBox" parent="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 166.0
margin_bottom = 108.0
group = SubResource( 1 )
text = "Cylinder"

[node name="GenerateButton" type="Button" parent="TabContainer/Generate mesh/C/VBoxContainer"]
margin_top = 568.0
margin_right = 166.0
margin_bottom = 588.0
text = "Generate"

[node name="Settings" type="PanelContainer" parent="TabContainer/Generate mesh/C"]
margin_left = 176.0
margin_right = 1016.0
margin_bottom = 588.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.05

[node name="PlaneSettings" type="GridContainer" parent="TabContainer/Generate mesh/C/Settings"]
margin_left = 7.0
margin_top = 7.0
margin_right = 833.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
columns = 2
script = ExtResource( 1 )

[node name="Size" type="Label" parent="TabContainer/Generate mesh/C/Settings/PlaneSettings"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Size"

[node name="PlaneSizeInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/PlaneSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 826.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "1"

[node name="Subdivisions" type="Label" parent="TabContainer/Generate mesh/C/Settings/PlaneSettings"]
margin_top = 33.0
margin_right = 80.0
margin_bottom = 47.0
text = "Subdivisions"

[node name="PlaneSubdivisionsInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/PlaneSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_top = 28.0
margin_right = 826.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "0"

[node name="CubeSettings" type="GridContainer" parent="TabContainer/Generate mesh/C/Settings"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 833.0
margin_bottom = 557.0
columns = 2
script = ExtResource( 1 )

[node name="Size" type="Label" parent="TabContainer/Generate mesh/C/Settings/CubeSettings"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Size"

[node name="CubeSizeInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CubeSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 826.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "1"

[node name="Subdivisions" type="Label" parent="TabContainer/Generate mesh/C/Settings/CubeSettings"]
margin_top = 33.0
margin_right = 80.0
margin_bottom = 47.0
text = "Subdivisions"

[node name="CubeSubdivisionsInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CubeSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_top = 28.0
margin_right = 826.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "0"

[node name="IcosphereSettings" type="GridContainer" parent="TabContainer/Generate mesh/C/Settings"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 833.0
margin_bottom = 557.0
columns = 2
script = ExtResource( 1 )

[node name="Radius" type="Label" parent="TabContainer/Generate mesh/C/Settings/IcosphereSettings"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
text = "Radius"

[node name="IcosphereRadiusInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/IcosphereSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 826.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "1"

[node name="Subdivisions" type="Label" parent="TabContainer/Generate mesh/C/Settings/IcosphereSettings"]
margin_top = 33.0
margin_right = 80.0
margin_bottom = 47.0
text = "Subdivisions"

[node name="IcosphereSubdivisionsInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/IcosphereSettings"]
unique_name_in_owner = true
margin_left = 84.0
margin_top = 28.0
margin_right = 826.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "1"

[node name="CylinderSettings" type="GridContainer" parent="TabContainer/Generate mesh/C/Settings"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 833.0
margin_bottom = 557.0
columns = 2
script = ExtResource( 1 )

[node name="Radius" type="Label" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 19.0
text = "Radius"

[node name="CylinderRadiusInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 826.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "1"

[node name="Depth" type="Label" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
margin_top = 33.0
margin_right = 63.0
margin_bottom = 47.0
text = "Depth"

[node name="CylinderDepthInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
unique_name_in_owner = true
margin_left = 67.0
margin_top = 28.0
margin_right = 826.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "1"

[node name="Vertices" type="Label" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
margin_top = 61.0
margin_right = 63.0
margin_bottom = 75.0
text = "Vertices"

[node name="CylinderVerticesInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
unique_name_in_owner = true
margin_left = 67.0
margin_top = 56.0
margin_right = 826.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "8"

[node name="Segments" type="Label" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
margin_top = 89.0
margin_right = 63.0
margin_bottom = 103.0
text = "Segments"

[node name="CylinderSegmentsInput" type="LineEdit" parent="TabContainer/Generate mesh/C/Settings/CylinderSettings"]
unique_name_in_owner = true
margin_left = 67.0
margin_top = 84.0
margin_right = 826.0
margin_bottom = 108.0
size_flags_horizontal = 3
text = "1"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C/Plane" to="TabContainer/Generate mesh/C/Settings/PlaneSettings" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C/Cube" to="TabContainer/Generate mesh/C/Settings/CubeSettings" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C/Icosphere" to="TabContainer/Generate mesh/C/Settings/IcosphereSettings" method="_on_toggled"]
[connection signal="toggled" from="TabContainer/Generate mesh/C/VBoxContainer/ScrollContainer/C/Cylinder" to="TabContainer/Generate mesh/C/Settings/CylinderSettings" method="_on_toggled"]
[connection signal="pressed" from="TabContainer/Generate mesh/C/VBoxContainer/GenerateButton" to="." method="generate"]
